--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
