--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "flowbite": "^2.2.1",
     "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
