--- a/Client/package.json
+++ b/Client/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "flowbite": "^2.2.1",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^18.0.0",
